--- a/ProjectCleanup/ProjectCleanup.csproj
+++ b/ProjectCleanup/ProjectCleanup.csproj
@@ -59,6 +59,9 @@
     <Compile Include="App.cs" />
     <Compile Include="Classes\ButtonDataClass.cs" />
     <Compile Include="cmdProjectCleanup.cs" />
+    <Compile Include="Forms\frmProjectCleanup - Copy.xaml.cs">
+      <DependentUpon>frmProjectCleanup - Copy.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -83,6 +86,10 @@
     <EmbeddedResource Include="Resources\Blue_16.png" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Forms\frmProjectCleanup - Copy.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Forms\frmProjectCleanup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
